@@ -26,9 +26,9 @@ package hudson.plugins.throttleconcurrents;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasItem;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.cloudbees.hudson.plugins.folder.Folder;
 import hudson.Launcher;
@@ -43,58 +43,54 @@ import hudson.model.Queue;
 import hudson.model.StringParameterDefinition;
 import hudson.model.queue.QueueTaskFuture;
 import hudson.security.GlobalMatrixAuthorizationStrategy;
+import java.io.File;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
-import org.jvnet.hudson.test.BuildWatcher;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.SequenceLock;
 import org.jvnet.hudson.test.TestBuilder;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
 /** Tests that {@link ThrottleJobProperty} actually works for builds. */
-public class ThrottleJobPropertyFreestyleTest {
+@WithJenkins
+class ThrottleJobPropertyFreestyleTest {
 
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+    private JenkinsRule j;
 
-    @ClassRule
-    public static BuildWatcher buildWatcher = new BuildWatcher();
+    @TempDir
+    private File firstAgentTmp;
 
-    @Rule
-    public TemporaryFolder firstAgentTmp = new TemporaryFolder();
-
-    @Rule
-    public TemporaryFolder secondAgentTmp = new TemporaryFolder();
+    @TempDir
+    private File secondAgentTmp;
 
     private List<Node> agents = new ArrayList<>();
 
     /** setup security so that no one except SYSTEM has any permissions. */
-    @Before
-    public void setupSecurity() {
+    @BeforeEach
+    void setupSecurity(JenkinsRule j) {
+        this.j = j;
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
         GlobalMatrixAuthorizationStrategy auth = new GlobalMatrixAuthorizationStrategy();
         j.jenkins.setAuthorizationStrategy(auth);
     }
 
     /** Clean up agents. */
-    @After
-    public void tearDown() throws Exception {
+    @AfterEach
+    void tearDown() throws Exception {
         TestUtil.tearDown(j, agents);
         agents = new ArrayList<>();
     }
 
     @Test
-    public void testNoThrottling() throws Exception {
+    void testNoThrottling() throws Exception {
         Node agent = TestUtil.setupAgent(j, firstAgentTmp, agents, null, 2, null);
 
         FreeStyleProject p1 = j.createFreeStyleProject();
@@ -125,7 +121,7 @@ public class ThrottleJobPropertyFreestyleTest {
     }
 
     @Test
-    public void onePerNode() throws Exception {
+    void onePerNode() throws Exception {
         Node agent = TestUtil.setupAgent(j, firstAgentTmp, agents, null, 2, null);
         TestUtil.setupCategories(TestUtil.ONE_PER_NODE);
 
@@ -164,7 +160,7 @@ public class ThrottleJobPropertyFreestyleTest {
         j.jenkins.getQueue().maintain();
         assertFalse(j.jenkins.getQueue().isEmpty());
         List<Queue.Item> queuedItemList =
-                Arrays.stream(j.jenkins.getQueue().getItems()).collect(Collectors.toList());
+                Arrays.stream(j.jenkins.getQueue().getItems()).toList();
         assertEquals(1, queuedItemList.size());
         Queue.Item queuedItem = queuedItemList.get(0);
         Set<String> blockageReasons = TestUtil.getBlockageReasons(queuedItem.getCauseOfBlockage());
@@ -187,7 +183,7 @@ public class ThrottleJobPropertyFreestyleTest {
     }
 
     @Test
-    public void twoTotal() throws Exception {
+    void twoTotal() throws Exception {
         Node firstAgent = TestUtil.setupAgent(j, firstAgentTmp, agents, null, 4, "on-agent");
         Node secondAgent = TestUtil.setupAgent(j, secondAgentTmp, agents, null, 4, "on-agent");
         TestUtil.setupCategories(TestUtil.TWO_TOTAL);
@@ -244,7 +240,7 @@ public class ThrottleJobPropertyFreestyleTest {
         j.jenkins.getQueue().maintain();
         assertFalse(j.jenkins.getQueue().isEmpty());
         List<Queue.Item> queuedItemList =
-                Arrays.stream(j.jenkins.getQueue().getItems()).collect(Collectors.toList());
+                Arrays.stream(j.jenkins.getQueue().getItems()).toList();
         assertEquals(1, queuedItemList.size());
         Queue.Item queuedItem = queuedItemList.get(0);
         Set<String> blockageReasons = TestUtil.getBlockageReasons(queuedItem.getCauseOfBlockage());
@@ -275,7 +271,7 @@ public class ThrottleJobPropertyFreestyleTest {
     }
 
     @Test
-    public void limitOneJobWithMatchingParams() throws Exception {
+    void limitOneJobWithMatchingParams() throws Exception {
         Node agent = TestUtil.setupAgent(j, firstAgentTmp, agents, null, 2, null);
 
         FreeStyleProject project = j.createFreeStyleProject();
@@ -304,7 +300,7 @@ public class ThrottleJobPropertyFreestyleTest {
         j.jenkins.getQueue().maintain();
         assertFalse(j.jenkins.getQueue().isEmpty());
         List<Queue.Item> queuedItemList =
-                Arrays.stream(j.jenkins.getQueue().getItems()).collect(Collectors.toList());
+                Arrays.stream(j.jenkins.getQueue().getItems()).toList();
         assertEquals(1, queuedItemList.size());
         Queue.Item queuedItem = queuedItemList.get(0);
         Set<String> blockageReasons = TestUtil.getBlockageReasons(queuedItem.getCauseOfBlockage());
@@ -328,7 +324,7 @@ public class ThrottleJobPropertyFreestyleTest {
 
     @Issue("JENKINS-25326")
     @Test
-    public void testThrottlingWithCategoryInFolder() throws Exception {
+    void testThrottlingWithCategoryInFolder() throws Exception {
         Node agent = TestUtil.setupAgent(j, firstAgentTmp, agents, null, 2, null);
         TestUtil.setupCategories(TestUtil.ONE_PER_NODE);
 
@@ -369,7 +365,7 @@ public class ThrottleJobPropertyFreestyleTest {
         j.jenkins.getQueue().maintain();
         assertFalse(j.jenkins.getQueue().isEmpty());
         List<Queue.Item> queuedItemList =
-                Arrays.stream(j.jenkins.getQueue().getItems()).collect(Collectors.toList());
+                Arrays.stream(j.jenkins.getQueue().getItems()).toList();
         assertEquals(1, queuedItemList.size());
         Queue.Item queuedItem = queuedItemList.get(0);
         Set<String> blockageReasons = TestUtil.getBlockageReasons(queuedItem.getCauseOfBlockage());
